--- a/Weather_Exercise.ipynb
+++ b/Weather_Exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f59ee8c2",
    "metadata": {
     "pycharm": {
@@ -102,7 +102,7 @@
    "source": [
     "rows = df_data.shape[0]\n",
     "columns = df_data.shape[1]\n",
-    "print(\"Number of rows and number of columns respectively: \" + str(rows) + \", \" + str(columns))"
+    "print(\"number of rows and number of columns respectively:\" + str(rows) + \", \" + str(columns))"
    ]
   },
   {
@@ -238,13 +238,13 @@
    "outputs": [],
    "source": [
     "df_data['datetime'] = pd.to_datetime(df_data['Date'].astype(str) + ' ' + df_data['Time'])\n",
-    "# Sort by datetime\n",
+    "# sort by datetime\n",
     "df_data = df_data.sort_values('datetime')\n",
-    "# Group by date and get minimum absolute difference between consecutive Outside Temperatures\n",
+    "# group by date and get minimum absolute difference between consecutive outside temps\n",
     "def min_diff(group):\n",
     "    return group['Outside Temperature'].diff().abs().min()\n",
     "result = df_data.groupby('Date').apply(min_diff).reset_index(name='Min Temp Diff')\n",
-    "print(\"Task 1-h: Minimum Outside Temperature difference each day:\")\n",
+    "print(\"min outside Temp diff each day\")\n",
     "print(result)\n"
    ]
   },
@@ -300,22 +300,18 @@
    "source": [
     "idx = df_data.groupby(['Date'])['Outside Temperature'].transform(max) == df_data['Outside Temperature']\n",
     "new_df = df_data[idx]\n",
-    "\n",
     "def time_to_seconds(t):\n",
     "    dt = datetime.strptime(t, \"%H:%M\")\n",
     "    return dt.hour * 3600 + dt.minute * 60 + dt.second\n",
     "\n",
     "new_df['seconds'] = new_df['Time'].apply(time_to_seconds)\n",
-    "\n",
-    "# Compute the average time in seconds\n",
+    "# compute the average time in seconds\n",
     "mean_seconds = new_df['seconds'].mean()\n",
-    "\n",
-    "# Convert back to HH:MM:SS\n",
+    "# convert back to hh:mm:ss\n",
     "avg_time = str(timedelta(seconds=int(mean_seconds)))\n",
     "avg_hottest_time = avg_time\n",
-    "\n",
-    "# Save to file\n",
-    "with open(\"Outside_Temperature.txt\", \"a\") as f:\n",
+    "# save to file\n",
+    "with open(\"outside_temperature.txt\", \"a\") as f:\n",
     "    f.writelines(avg_hottest_time)\n"
    ]
   },
@@ -345,8 +341,8 @@
     "idx = df_data.groupby(['Date'])['Outside Temperature'].transform(max) == df_data['Outside Temperature']\n",
     "new_df = df_data[idx]\n",
     "mode = new_df['Time'].value_counts().idxmax()\n",
-    "f = open(\"Outside_Temperature.txt\", \"a\")\n",
-    "f.write(\"\\nMost frequent hottest time: \" + mode)\n",
+    "f = open(\"outside_temperature.txt\", \"a\")\n",
+    "f.write(\"\\n most frequent hottest time\" + mode)\n",
     "f.close()\n"
    ]
   },
@@ -380,7 +376,7 @@
     "top_10_df['datetime'] = pd.to_datetime(top_10_df['Date'],dayfirst=True)\n",
     "sorted_top_10_df = top_10_df.sort_values(by=['datetime'])\n",
     "#print(sorted_top_10_df)\n",
-    "f = open(\"Outside_Temperature.txt\", \"a\")\n",
+    "f = open(\"outside_temperature.txt\", \"a\")\n",
     "f.writelines(['\\n', str(sorted_top_10_df['Date']), ' ', str(sorted_top_10_df['Time']), ' ', str(sorted_top_10_df['Outside Temperature'])])\n",
     "f.close()"
    ]
@@ -410,7 +406,7 @@
    "source": [
     "f1 = open(\"Hi_Temperature.txt\", \"a\")\n",
     "df_data['datetime'] = pd.to_datetime(df_data['Date'],dayfirst=True)\n",
-    "filtered_df = df_data.loc[(df_data['datetime'] >= '2006-06-01')& (df_data['datetime'] < '2006-06-10')] # get the first 9 days in June\n",
+    "filtered_df = df_data.loc[(df_data['datetime'] >= '2006-06-01')& (df_data['datetime'] < '2006-06-10')]\n",
     "result_df = filtered_df[(filtered_df['Hi Temperature'] >= 21.3) & (filtered_df['Hi Temperature'] <= 23.3) | (filtered_df['Low Temperature'] >= 10.1) & (filtered_df['Low Temperature'] <= 10.5) ]\n",
     "f1.writelines(['\\n', str(result_df['Date']), ' ', str(result_df['Time'])])\n",
     "f1.close()\n",
@@ -440,19 +436,17 @@
    },
    "outputs": [],
    "source": [
-    "# Make sure your Date is datetime type\n",
     "df_data['Date'] = pd.to_datetime(df_data['Date'], dayfirst=True)\n",
     "monthly_avg = df_data.resample('M', on='Date')['Outside Temperature'].mean()\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "sns.lineplot(x=monthly_avg.index, y=monthly_avg.values, marker='o')\n",
     "\n",
-    "# Format x-axis to show month-year like 'May 2006'\n",
     "plt.xticks(ticks=monthly_avg.index, labels=monthly_avg.index.strftime('%b %Y'), rotation=45)\n",
     "\n",
-    "plt.title('Average Outside Temperature per Month')\n",
+    "plt.title('Average outside temperature per month')\n",
     "plt.xlabel('Month')\n",
-    "plt.ylabel('Average Temperature')\n",
+    "plt.ylabel('Average temperature')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -480,27 +474,23 @@
    },
    "outputs": [],
    "source": [
-    "# Get first 5 days of each month with at least 5 days of data\n",
+    "# get first 5 days of each month with at least 5 days of data\n",
     "df_data['Date'] = pd.to_datetime(df_data['Date'], dayfirst=True)\n",
     "df_data['Day'] = df_data['Date'].dt.day\n",
     "df_data['Month'] = df_data['Date'].dt.to_period('M')\n",
     "\n",
-    "# Keep only months that have 5 or more distinct days ≤ 5\n",
+    "# keep only months that have 5 or more distinct days ≤ 5\n",
     "valid_months = df_data[df_data['Day'] <= 5].groupby('Month')['Day'].nunique()\n",
     "valid_months = valid_months[valid_months >= 5].index\n",
     "\n",
-    "# Filter data to only those valid months and first 5 days\n",
+    "# filter data to only those valid months and first 5 days\n",
     "filtered = df_data[\n",
     "    (df_data['Month'].isin(valid_months)) & (df_data['Day'] <= 5)\n",
     "]\n",
     "\n",
-    "# Group by month and compute average\n",
+    "# group by month and compute average\n",
     "monthly_avg = filtered.groupby('Month')['Outside Temperature'].mean().reset_index()\n",
     "monthly_avg['Month'] = monthly_avg['Month'].astype(str)\n",
-    "\n",
-    "# Plot\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.barplot(x='Month', y='Outside Temperature', data=monthly_avg)\n",
